--- a/Layout 05 Grid/css/nav.css
+++ b/Layout 05 Grid/css/nav.css
@@ -2,7 +2,13 @@ html {
   scroll-behavior: smooth;
 }
 
+@font-face {
+  font-family: LogoFont;
+  src: url(/css/BebasNeue-Regular.ttf);
+}
+
 body {
+  font-family: 'Oswald', sans-serif;
   font-family: 'Raleway', sans-serif;
   font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
@@ -38,20 +44,25 @@ li a:hover {
 }
 
 .logo {
+  font-family: LogoFont;
   color: Orange;
   background-color: #333;
   font-size: 30px;
   margin-top: 5px;
-  font-style: italic;
 }
 
 .hero-image {
-  position: relative;
+  width: auto;
   margin-left: 80px;
   margin-right: 80px;
-  margin-top: 0;
-  background-image: url(pizza-banner.jpg);
-  height: 350px;
+  height: 300px;
+  background-image: url(Pizza_Party_Logo-banner.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+  background-attachment: unset;
+  display: flex;
+  align-items: center;
 }
 
 .banner-text {
@@ -61,11 +72,12 @@ li a:hover {
   justify-content: center;
   height: 100%;
   margin-left: 40px;
-  color: orange;
 }
 
 .banner-text h1 {
   font-size: 38px;
-  margin-bottom: 10px;
+  margin-top: -200px;
+  font-family: Garamond, serif;
+  color: #eeff1b;
+  -webkit-text-stroke: 1px #FF4500;
 }
-
