--- a/Layout 05 Grid/css/nav.css
+++ b/Layout 05 Grid/css/nav.css
@@ -4,7 +4,7 @@ html {
 
 @font-face {
   font-family: LogoFont;
-  src: url(/css/BebasNeue-Regular.ttf);
+  src: url(./BebasNeue-Regular.ttf);
 }
 
 body {
